--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -136,10 +136,10 @@
       <input name="wy-main-nav-checkbox" id="wy-main-nav-checkbox" class="wy-main-nav-checkbox" type="checkbox">
       <label for="wy-main-nav-checkbox" class="wy-main-nav-toggle">Menu</label>
       <ul id="#wy-main-nav-menu" class="wy-main-nav-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Documentation</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="https:/cilium.io">Cilium</a></li>
+        <li><a href="https://cilium.io/blog">Blog</a></li>
+        <li><a href="https://docs.cilium.io">Documentation</a></li>
+        <li><a href="https://isovalent.com" style="color: white; background: (52, 79, 138, 1); display: inline-block; padding: 7px 15px;">Enterprise</a></li>
       </ul>
     </nav>
   </header>
