--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -139,7 +139,7 @@
         <li><a href="https:/cilium.io">Cilium</a></li>
         <li><a href="https://cilium.io/blog">Blog</a></li>
         <li><a href="https://docs.cilium.io">Documentation</a></li>
-        <li><a href="https://isovalent.com" style="color: white; background: (52, 79, 138, 1); display: inline-block; padding: 7px 15px;">Enterprise</a></li>
+      <li><a href="https://isovalent.com" style="color: white; background: rgb(52, 79, 138, 1);">Enterprise</a></li>
       </ul>
     </nav>
   </header>
