--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -147,12 +147,11 @@
   {% block extrabody %} {% endblock %}
   <div class="wy-grid-for-nav">
     {# SIDE NAV, TOGGLES ON MOBILE #}
-    <nav data-toggle="wy-nav-shift" class="wy-nav-side">
-      <div class="wy-side-scroll">
-        <div class="wy-side-nav-search" {% if theme_style_nav_header_background %}
+    <div class="wy-nav-wrapper" data-toggle="wy-nav-shift" >
+      <div class="wy-side-nav-search" {% if theme_style_nav_header_background %}
           style="background: {{theme_style_nav_header_background}}" {% endif %}>
           {% block sidebartitle %}
-
+  
           {% if theme_display_version %}
           {%- set nav_version = version %}
           {% if READTHEDOCS and current_version %}
@@ -164,36 +163,38 @@
               </div>
             {% endif %} -->
           {% endif %}
-
+  
           {% include "searchbox.html" %}
-
+  
           {% endblock %}
         </div>
-
-        {% block navigation %}
-        <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
-          {% block menu %}
-          {#
-              The singlehtml builder doesn't handle this toctree call when the
-              toctree is empty. Skip building this for now.
-            #}
-          {% if 'singlehtml' not in builder %}
-          {% set global_toc = toctree(maxdepth=theme_navigation_depth|int,
-                                          collapse=theme_collapse_navigation|tobool,
-                                          includehidden=theme_includehidden|tobool,
-                                          titles_only=theme_titles_only|tobool) %}
-          {% endif %}
-          {% if global_toc %}
-          {{ global_toc }}
-          {% else %}
-          <!-- Local TOC -->
-          <div class="local-toc">{{ toc }}</div>
-          {% endif %}
+      <nav class="wy-nav-side">
+        <div class="wy-side-scroll">
+          {% block navigation %}
+          <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
+            {% block menu %}
+            {#
+                The singlehtml builder doesn't handle this toctree call when the
+                toctree is empty. Skip building this for now.
+              #}
+            {% if 'singlehtml' not in builder %}
+            {% set global_toc = toctree(maxdepth=theme_navigation_depth|int,
+                                            collapse=theme_collapse_navigation|tobool,
+                                            includehidden=theme_includehidden|tobool,
+                                            titles_only=theme_titles_only|tobool) %}
+            {% endif %}
+            {% if global_toc %}
+            {{ global_toc }}
+            {% else %}
+            <!-- Local TOC -->
+            <div class="local-toc">{{ toc }}</div>
+            {% endif %}
+            {% endblock %}
+          </div>
           {% endblock %}
         </div>
-        {% endblock %}
-      </div>
-    </nav>
+      </nav>
+    </div>
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap">
 
@@ -262,6 +263,16 @@
   {% endif %}
 
   {%- block footer %} {% endblock %}
+
+  <script>
+    docsearch({
+      indexName: 'cilium_docs',
+      apiKey: '4e9b6e188b87deb43926a7c10d0f4d44',
+      appId: 'QWB13UU32F', 
+      inputSelector: '#rtd-search-form input, #flyout-search-form input',
+      debug: false,
+    });
+  </script>
 
 </body>
 
