Change navigation in the header
- make header lead to cilium website
- add slack

Signed-off-by: Sergey Generalov <sergey@genbit.ru>

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -114,7 +114,7 @@
       {% if logo and theme_logo_only %}
       <a href="{{ pathto(master_doc) }}" class="wy-header-logo-wrapper">
         {% else %}
-        <a href="{{ pathto(master_doc) }}" class="wy-header-logo-wrapper icon icon-home"
+        <a href="https://cilium.io" class="wy-header-logo-wrapper icon icon-home"
           alt="{{ _("Documentation Home") }}"> {{ project }}
           {% endif %}
 
@@ -137,9 +137,8 @@
       <label for="wy-main-nav-checkbox" class="wy-main-nav-toggle">Menu</label>
       <ul id="#wy-main-nav-menu" class="wy-main-nav-menu">
         <li><a href="https://isovalent.com" style="color: white; background: rgb(52, 79, 138, 1);">Enterprise</a></li>
-        <li><a href="https://cilium.io">Cilium</a></li>
         <li><a href="https://cilium.io/blog">Blog</a></li>
-        <li><a href="https://docs.cilium.io">Documentation</a></li>
+        <li><a href="https://cilium.herokuapp.com/">Slack</a></li>
       </ul>
     </nav>
   </header>
