Moved docsearch assets into template & added docsearch version filter (#5)
* Fixes for menu & content width
* Fixes for injected versions widget
* Fixes for mobile layout
* Docsearch setup
* Use local css & js for docsearch
* Fix indexName for docsearch
* Use docs version in docsearch filter
* Fix docsearch filter current version

Co-authored-by: Alex Solovev <alex.solovev.work@gmail.com>
Signed-off-by: Quentin Monnet <quentin@isovalent.com>

--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -36,6 +36,9 @@
     {{ css_tag(cssfile) }}
   {%- endfor -%}
 
+  {# DOCSEARCH STYLES #}
+  <link rel="stylesheet" href="{{ pathto('_static/css/docsearch.min.css', 1) }}" type="text/css" />
+
   {#- FAVICON
       favicon_url is the only context var necessary since Sphinx 4.
       In Sphinx<4, we use favicon but need to prepend path info.
@@ -263,6 +266,7 @@
 
   {%- block footer %} {% endblock %}
 
+  <script type="text/javascript" src="{{ pathto('_static/js/docsearch.min.js', 1) }}"></script>
   <script>
     docsearch({
       indexName: 'cilium_docs',
@@ -270,6 +274,9 @@
       appId: 'QWB13UU32F', 
       inputSelector: '#rtd-search-form input, #flyout-search-form input',
       debug: false,
+      algoliaOptions: {
+        'facetFilters': ['version:{{ current_version }}']
+      }
     });
   </script>
 
