--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -93,6 +93,7 @@
 
     <link rel="stylesheet" href="{{ pathto('_static/css/github-button.css', 1) }}" type="text/css" />
     <script type="text/javascript" src="{{ pathto('_static/js/github-button.js', 1) }}"></script>
+    <script type="text/javascript" src="{{ pathto('_static/js/docsearch.min.js', 1) }}"></script>
 
     {#- OPENSEARCH #}
     {%- if use_opensearch %}
@@ -344,18 +345,19 @@
 
   {%- block footer %} {% endblock %}
 
-  <script type="text/javascript" src="{{ pathto('_static/js/docsearch.min.js', 1) }}"></script>
   <script>
-    docsearch({
-      indexName: 'cilium_docs',
-      apiKey: 'ebd279472edfb5246bababfd1f324a98',
-      appId: 'NR0TQZZ2NG', 
-      inputSelector: '#rtd-search-form input, #flyout-search-form input',
-      debug: false,
-      algoliaOptions: {
-        'facetFilters': ['version:{{ current_version }}']
-      }
-    });
+    setTimeout(() => {
+      docsearch({
+        indexName: 'cilium_docs',
+        apiKey: 'ebd279472edfb5246bababfd1f324a98',
+        appId: 'NR0TQZZ2NG', 
+        inputSelector: '#rtd-search-form input, #flyout-search-form input',
+        debug: false,
+        algoliaOptions: {
+          'facetFilters': ['version:{{ current_version }}']
+        }
+      });
+    }, 0);
   </script>
 
 </body>
