--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -139,7 +139,7 @@
           {# the master_doc variable was renamed to root_doc in Sphinx 4 (master_doc still exists in later Sphinx versions) #}
           {%- set _logo_url = logo_url|default(pathto('_static/' + (logo or ""), 1)) %}
           {%- set _root_doc = root_doc|default(master_doc) %}
-          <a href="https://www.cilium.io"{% if not theme_logo_only %} class="wy-header-logo-wrapper icon icon-home"{% else %} class="wy-header-logo-wrapper"{% endif %}>
+          <a href="{{ url_root }}"{% if not theme_logo_only %} class="wy-header-logo-wrapper icon icon-home"{% else %} class="wy-header-logo-wrapper"{% endif %}>
             {% if not theme_logo_only %}{{ project }}{% endif %}
             {%- if logo or logo_url %}
               <img src="{{ _logo_url }}" class="logo" alt="{{ _('Logo') }}"/>
