--- a/sphinx_rtd_theme/layout.html
+++ b/sphinx_rtd_theme/layout.html
@@ -252,6 +252,8 @@
             {%- endif %} -->
           {%- endif %}
 
+          {%- include "projects.html" %}
+
           {%- include "searchbox.html" %}
 
           {%- endblock %}
